--- a/index.html
+++ b/index.html
@@ -9,21 +9,23 @@
     <!-- <link rel="stylesheet" href="arquivo/bootstrap.min.css"> -->
     <title>Bootstrap</title>
 </head>
-<body>
-    <h1>Titulo 1</h1>
+<body class="container">
+    <!-- <h1>Titulo 1</h1>
     <h2>Titulo 2</h2>
-    <h3>Título 3</h3>
+    <h3>Título 3</h3> -->
 
-    <button class="btn btn-primary">Botão </button>
+    <!-- <button class="btn btn-primary">Botão </button> -->
 
-    <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam laudantium accusantium quidem in voluptates quisquam, minus a adipisci velit cumque labore odio repudiandae, commodi nemo inventore sequi, vitae itaque qui! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Hic blanditiis numquam aspernatur enim ratione. Quo sunt error ut rerum officiis commodi cupiditate, et numquam dignissimos deserunt ipsum eligendi, illum in?
-    </p>
-    <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam laudantium accusantium quidem in voluptates quisquam, minus a adipisci velit cumque labore odio repudiandae, commodi nemo inventore sequi, vitae itaque qui! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Hic blanditiis numquam aspernatur enim ratione. Quo sunt error ut rerum officiis commodi cupiditate, et numquam dignissimos deserunt ipsum eligendi, illum in?
-    </p>
+    <div class="row">   
 
-    <div class="container text-center">
+        <p class="col">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam laudantium accusantium quidem in voluptates quisquam, minus a adipisci velit cumque labore odio repudiandae, commodi nemo inventore sequi, vitae itaque qui! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Hic blanditiis numquam aspernatur enim ratione. Quo sunt error ut rerum officiis commodi cupiditate, et numquam dignissimos deserunt ipsum eligendi, illum in?
+        </p>
+        <p class="col">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam laudantium accusantium quidem in voluptates quisquam, minus a adipisci velit cumque labore odio repudiandae, commodi nemo inventore sequi, vitae itaque qui! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Hic blanditiis numquam aspernatur enim ratione. Quo sunt error ut rerum officiis commodi cupiditate, et numquam dignissimos deserunt ipsum eligendi, illum in?
+        </p>
+    </div> 
+    <!-- <div class="container text-center">
         <div class="row">
             <div class="col"> 1 de 2 </div>
             <div class="col"> 2 de 2 </div>
@@ -41,12 +43,12 @@
             <div class="col-4"> 8 de 12 </div>
             <div class="col-4"> 9 de 12 </div>
             <div class="col-4"> 10 de 12 </div>
-            <div class="col-4"> 12 de 12 </div>
             <div class="col-4"> 11 de 12 </div>
+            <div class="col-4"> 12 de 12 </div>
 
             <div class="col-12">13 </div>
         </div>
-    </div>
+    </div> -->
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
 
